Fix Project Spacing Issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,7 @@ section h3 {
 p {
   font-size: 1.2em;
   font-weight: 100;
+  line-height: 1.1;
 }
 
 strong {
@@ -78,7 +79,7 @@ strong {
 
 .project {
   display: inline-block;
-  padding: 20px 0px;
+  margin: 20px 0px;
 }
 
 .project-images {
@@ -131,7 +132,7 @@ footer ul li {
 
 @media only screen and (min-width: 768px) {
   section {
-    width: 70%;
+    width: 75%;
   }
 
   #about p {
@@ -143,7 +144,10 @@ footer ul li {
   .project {
     height: 400px;
     width: 400px;
+    vertical-align: top;
+    margin: 20px 20px;
   }
+
   .project-images {
     height: 250px;
     width: 400px;
